# Mycel

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.ja.md  README.md
.github/workflows/: build.yml
Sample/: README.md
Sample/.mycel/: collapsed.json  colors.json  hashcache.json  links.json  order.json  previews.json  view.json
Sample/.mycel/trash/5/親フォルダー1/NewFolder/子ルート/.mycel/: hashcache.json  parent.json  view.json
Sample/01_現状把握/: データ所在.md  業務フロー.md  関係者.md
Sample/01_現状把握/ヒアリング/: 現場の声.md  質問設計.md
Sample/01_現状把握/業務量分析/: 件数と頻度.md  時間の使い方.md
Sample/02_課題構造/: ボトルネック.md  原因仮説.md  影響範囲.md
Sample/02_課題構造/優先順位/: 優先テーマ.md  評価軸.md
Sample/02_課題構造/因果関係/: 悪循環.md  課題ツリー.md
Sample/03_改革テーマ/: ペーパーレス化.md  情報共有.md  承認プロセス短縮.md
Sample/03_改革テーマ/対象外にすること/: やらないこと.md  後回しテーマ.md
Sample/03_改革テーマ/重点テーマ選定/: 成功条件.md  選定理由.md
Sample/04_施策アイデア/: ワークフロー導入.md  入力自動化.md  業務標準化.md
Sample/04_施策アイデア/中長期施策/: システム連携.md  業務基盤.md
Sample/04_施策アイデア/短期施策/: すぐできる改善.md  テンプレート化.md
Sample/05_KPIと効果/: KPI一覧.md  効果試算.md
Sample/05_KPIと効果/効果検証/: 改善判断.md  検証会.md
Sample/05_KPIと効果/測定設計/: 基準値.md  測定方法.md
Sample/06_ロードマップ/: 30日計画.md  90日計画.md
Sample/06_ロードマップ/展開計画/: 展開順.md  教育計画.md
Sample/06_ロードマップ/試験運用/: フィードバック.md  対象部署.md
Sample/07_コミュニケーション/: 合意形成.md  説明資料.md
Sample/07_コミュニケーション/現場説明/: FAQ.md  説明会.md
Sample/07_コミュニケーション/経営報告/: 判断依頼.md  報告フォーマット.md
Sample/08_リスク管理/: 失敗リスク.md  対策.md
Sample/08_リスク管理/変更管理/: 周知ルール.md  変更履歴.md
Sample/08_リスク管理/運用リスク/: 二重運用.md  属人化.md
Sample/09_会議メモ/: キックオフ.md  ヒアリング質問.md
Sample/09_会議メモ/意思決定ログ/: 保留事項.md  決定事項.md
Sample/09_会議メモ/論点整理/: 対立点.md  未決事項.md
assets/: mycel.desktop  mycel.icns  mycel.qrc  mycel.rc
docs/: README.ja.md  architecture-redesign-plan.ja.md  board-mode-plan.ja.md  development-plan.ja.md  external-root-link-plan.ja.md  hierarchical-mycel-plan.ja.md  keyboard-shortcut-ideas.ja.md  new-project-detailed-design.ja.md  search-feature-design.ja.md
scripts/: build-linux.sh  build-mac.sh  build-windows.ps1  package-linux.sh  package-windows-inno.ps1
src/: board_view.h  connection_layer_item.h  drag_controller.h  drop_target_resolver.h  file_name_order.h  main.cpp  main_window.h  main_window_actions.cpp  main_window_board.cpp  main_window_core.cpp  main_window_dragdrop.cpp  main_window_filesystem.cpp  main_window_history.cpp  main_window_layout.cpp  main_window_links.cpp  main_window_persistence.cpp  main_window_preview.cpp  main_window_search.cpp  mind_map_scene.h  mycel_fileops.hpp  node_item.h  parent_root_item.h  preview_widgets.h  search_controller.h  selection_controller.h  text_editor.h  text_font_settings.h  tree_model.h
tests/: file_name_order_test.cpp  fileops_test.cpp  search_controller_test.cpp
